# novelist

./: .env  .gitignore  README.md  colleen_hoover_book.json  my_wizard_answers.json  pyproject.toml  writing_rules_cheat_sheet.md
draft_driver/: build_manuscript.py  draft_driver.py  formatter.py  logconf.py  summarizer.py  utils.py
draft_driver/engine/: build_manuscript.py  draft_driver.py  utils.py
draft_driver/inputs/: novelist_outline.json  novelist_style_guide.json
novelist_cli/: __main__.py  models.py
novelist_cli/generators/: prompt_builders.py
novelist_cli/llm/: openai_wrapper.py
novelist_cli/utils/: validate.py
outputs/chapters/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  prologue.md
outputs/final/: manuscript.md
outputs/summaries/: ch01.summary.json  ch02.summary.json  ch03.summary.json  ch04.summary.json  ch05.summary.json  ch06.summary.json  ch07.summary.json  ch08.summary.json  ch09.summary.json  ch10.summary.json  ch11.summary.json  ch12.summary.json  ch13.summary.json  ch14.summary.json  ch15.summary.json  ch16.summary.json  ch17.summary.json  ch18.summary.json  ch19.summary.json  ch20.summary.json  ch21.summary.json  ch22.summary.json  ch23.summary.json  ch24.summary.json  epilogue.summary.json  prologue.summary.json
presets/: genres.json
presets/styles/: ColleenHoover.json  DanielleSteel.json  (+11 more)
schemas/: chapters.schema.json  outline.schema.json  style_guide.schema.json
tests/: test_artifact_validation.py  test_models.py  validate_artifacts.py
